# pip-autoremove

./: .gitignore  README.rst  pip_autoremove.py  pyproject.toml  setup.cfg  setup.py  test_pip_autoremove.py  tox.ini
.github/workflows/: test.yml
