[metadata]
name = pip-autoremove
version = attr: pip_autoremove.__version__
description = Remove a package and its unused dependencies
long_description = file: README.rst, LICENSE
url = https://github.com/invl/pip-autoremove
license = Apache License 2.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: PyPy
data_files = pyproject.toml

[options]
scripts =
    pip_autoremove.py
install_requires =
    pip
    setuptools

[options.entry_points]
console_scripts =
    pip-autoremove = pip_autoremove:main

[wheel]
universal=1
